Fix breakpoint $large on firefox

--- a/src/templates/ContentTemplate.scss
+++ b/src/templates/ContentTemplate.scss
@@ -1,7 +1,7 @@
 @import '../components/common.scss';
 
 .course-content-container {
-  width: 100%;
+  max-width: $large;
 }
 
 .course {
